[gd_scene load_steps=9 format=3 uid="uid://82x1whxfmupu"]

[ext_resource type="Texture2D" uid="uid://dwv4bsvhpfcvf" path="res://assets/ui/alert_L.png" id="1_53pji"]
[ext_resource type="Script" path="res://src/events/event_notif.gd" id="1_t24ib"]
[ext_resource type="Texture2D" uid="uid://clrwrleeqfawk" path="res://assets/ui/alert_m.png" id="2_jctl8"]
[ext_resource type="FontFile" uid="uid://817qgoiy1gah" path="res://assets/resources/font/PixelOperator.ttf" id="2_nkbjv"]
[ext_resource type="Texture2D" uid="uid://b5ufk8tthf6fm" path="res://assets/ui/alert_sm.png" id="3_1rfbb"]

[sub_resource type="Gradient" id="Gradient_hm70d"]
offsets = PackedFloat32Array(0, 0.727273)
colors = PackedColorArray(0.129412, 0.12549, 0.12549, 0.541176, 0.129412, 0.12549, 0.12549, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ychae"]
gradient = SubResource("Gradient_hm70d")

[sub_resource type="SpriteFrames" id="SpriteFrames_p11v1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_53pji")
}],
"loop": true,
"name": &"large",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jctl8")
}],
"loop": true,
"name": &"medium",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_1rfbb")
}],
"loop": true,
"name": &"small",
"speed": 5.0
}]

[node name="EventNotif" type="Control"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t24ib")

[node name="Text_bg" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 199.0
offset_top = 137.0
offset_right = 335.0
offset_bottom = 552.0
rotation = 1.5708
scale = Vector2(-1, 1)
texture = SubResource("GradientTexture2D_ychae")

[node name="ColorRect" type="ColorRect" parent="Text_bg"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -0.000976563
offset_right = -67.0
offset_bottom = -0.000976563
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -216.0
offset_top = 1.0
offset_right = -214.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect4" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 198.0
offset_top = 1.0
offset_right = 200.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2

[node name="Threat_Level" type="AnimatedSprite2D" parent="."]
position = Vector2(-149, 83)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_p11v1")
animation = &"medium"

[node name="Low_Level" type="Label" parent="."]
layout_mode = 0
offset_left = -89.0
offset_top = 35.0
offset_right = 170.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0.772549, 0.698039, 0.317647, 1)
theme_override_colors/font_shadow_color = Color(0.427451, 0.376471, 0.121569, 1)
theme_override_fonts/font = ExtResource("2_nkbjv")
theme_override_font_sizes/font_size = 30
text = "LOW LEVEL THREAT"
horizontal_alignment = 1

[node name="Medium_Level" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = -89.0
offset_top = 35.0
offset_right = 170.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0.87451, 0.447059, 0.227451, 1)
theme_override_colors/font_shadow_color = Color(0.513726, 0.2, 0.0745098, 1)
theme_override_fonts/font = ExtResource("2_nkbjv")
theme_override_font_sizes/font_size = 30
text = "MEDIUM LEVEL THREAT"
horizontal_alignment = 1

[node name="High_Level" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = -86.0
offset_top = 35.0
offset_right = 173.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0.890196, 0.305882, 0.223529, 1)
theme_override_colors/font_shadow_color = Color(0.470588, 0.12549, 0.0823529, 1)
theme_override_fonts/font = ExtResource("2_nkbjv")
theme_override_font_sizes/font_size = 30
text = "HIGH  LEVEL THREAT"
horizontal_alignment = 1

[node name="Event_title" type="Label" parent="."]
layout_mode = 0
offset_left = -90.0
offset_top = 70.0
offset_right = 178.0
offset_bottom = 101.0
theme_override_fonts/font = ExtResource("2_nkbjv")
theme_override_font_sizes/font_size = 20
text = "Revolution against the government"

[node name="Time_label" type="Label" parent="."]
layout_mode = 0
offset_left = -91.0
offset_top = 97.0
offset_right = 177.0
offset_bottom = 128.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_nkbjv")
theme_override_font_sizes/font_size = 20
text = "[Time Remaining]"
